--- a/.github/workflows/test_docker_push.yml
+++ b/.github/workflows/test_docker_push.yml
@@ -1,30 +1,13 @@
-name: DockerHub Push Test
+name: DockerHub Login Test
 
 on:
   workflow_dispatch:
 
 jobs:
-  test-push:
+  login-test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
       - name: Docker Login
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and Push Test Image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          file: ./api.Dockerfile   # Or any simple Dockerfile
-          push: true
-          tags: |
-            remz01/test-push:debug
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
