--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -1,8 +1,7 @@
-# .github/workflows/deploy-ec2.yml
 name: Deploy to EC2 (Docker Compose)
 
 on:
-  workflow_dispatch:  # ✅ manual trigger only
+  workflow_dispatch:  # Manual trigger from GitHub UI
 
 env:
   DOCKERHUB_USER: remz01
@@ -10,23 +9,39 @@ env:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted  # Your EC2 is now the runner
 
     steps:
-      - name: SSH into EC2 and deploy
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            echo "Pulling Docker images..."
-            docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-            docker pull ${{ env.DOCKERHUB_USER }}/fastapi-backend:${{ env.VERSION }}
-            docker pull ${{ env.DOCKERHUB_USER }}/gradio-ui:${{ env.VERSION }}
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-            echo "Running docker-compose..."
-            cd ~/logbert-structured-api || git clone https://github.com/rems8505/logbert-structured-api.git && cd logbert-structured-api
-            git pull origin main
-            docker-compose down
-            docker-compose up -d
+      - name: Set up working directory
+        run: |
+          cd ~
+          if [ ! -d "logbert-structured-api" ]; then
+            git clone https://github.com/rems8505/logbert-structured-api.git
+          fi
+          cd logbert-structured-api
+          git pull origin main
+
+      - name: Docker login to Docker Hub
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Pull Docker images
+        run: |
+          docker pull ${{ env.DOCKERHUB_USER }}/fastapi-backend:latest
+          docker pull ${{ env.DOCKERHUB_USER }}/gradio-ui:latest
+
+      - name: Stop old containers
+        run: |
+          cd ~/logbert-structured-api
+          docker compose down
+
+      - name: Start new containers
+        run: |
+          cd ~/logbert-structured-api
+          docker compose up -d --remove-orphans
+
+      - name: ✅ Deployment Complete
+        run: echo "Deployment to EC2 self-hosted runner completed successfully!"
