--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -30,18 +30,18 @@ jobs:
 
       - name: Pull Docker images
         run: |
-          docker pull ${{ secrets.DOCKER_USERNAME }}/fastapi-backend:latest
-          docker pull ${{ secrets.DOCKER_USERNAME }}/gradio-ui:latest
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/fastapi-backend:latest
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/gradio-ui:latest
 
       - name: Stop old containers
         run: |
           cd ~/logbert-structured-api
-          docker-compose down
+          sudo docker-compose down
 
       - name: Start new containers
         run: |
           cd ~/logbert-structured-api
-          docker-compose up -d --remove-orphans
+          sudo docker-compose up -d --remove-orphans
 
       - name: ✅ Deployment Complete
         run: echo "Deployment to EC2 self-hosted runner completed successfully!"
